# folium-map-swap-control

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
folium_map_swap_control/: __init__.py  map_swap_control.css  map_swap_control.js
